--- a/FFMPEGWrapper/FFMPEGWrapper.csproj
+++ b/FFMPEGWrapper/FFMPEGWrapper.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1;net40</TargetFrameworks>
+	  <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
 </Project>
